--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["sync"]
+sync = []
+async = ["async-fs", "futures-lite"]
+
 [dependencies]
 nix = "0.21.0"
+async-fs = { version="1.5.0", optional=true }
+futures-lite = { version="1.12.0", optional=true }
