--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ keywords = ["PTY", "TTY", "fork"]
 categories = ["development-tools"]
 
 [features]
-default = ["sync"]
+default = ["async"]
 sync = []
-async = ["async-fs", "futures-lite"]
+async = ["async-fs", "futures-lite", "pin-project"]
 
 [dependencies]
 nix = "0.21.0"
 async-fs = { version="1.5.0", optional=true }
 futures-lite = { version="1.12.0", optional=true }
+pin-project = { version="1.0.7", optional=true }
