--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ categories = ["development-tools"]
 [features]
 default = ["sync"]
 sync = []
-async = ["async-fs", "futures-lite", "pin-project"]
+async = ["async-io", "futures-lite", "pin-project"]
 
 [dependencies]
 nix = "0.21.0"
-async-fs = { version="1.5.0", optional=true }
+async-io = { version="1.6.0", optional=true }
 futures-lite = { version="1.12.0", optional=true }
 pin-project = { version="1.0.7", optional=true }
