--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --jobs 1 --verbose ${{ matrix.feauture }} 
+          args: --verbose ${{ matrix.feauture }} 
 
   fmt:
     name: Rustfmt
