Restructure project to be only lowlevel library
Remove all high level abstractions in order to not have a bagage for
those who don't use it.

For those who are all of them were moved to `expectrl`.

Signed-off-by: Maxim Zhiburt <zhiburt@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,14 +31,13 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, macos-latest]
-        feauture: [--features default, --no-default-features --features async]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --verbose ${{ matrix.feauture }} 
+          args: --verbose
 
   fmt:
     name: Rustfmt
