Change the Cargo description
Signed-off-by: Maxim Zhiburt <zhiburt@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ptyprocess"
 version = "0.3.0"
 authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
 edition = "2018"
-description = "A library for cutting a string while preserving colors."
+description = "A library to work with PTY/TTY on Unix systems"
 repository = "https://github.com/zhiburt/ptyprocess"
 documentation = "https://docs.rs/ptyprocess"
 homepage = "https://github.com/zhiburt/ptyprocess"
